--- a/src/locale/messages.xlf
+++ b/src/locale/messages.xlf
@@ -20,6 +20,10 @@
           <context context-type="sourcefile">src/app/core/components/create-new-board-popup/create-new-board-popup.component.html</context>
           <context context-type="linenumber">9</context>
         </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/modules/board/components/column/column.component.html</context>
+          <context context-type="linenumber">6</context>
+        </context-group>
         <note priority="1" from="description">Input message</note>
       </trans-unit>
       <trans-unit id="shortTitleErr" datatype="html">
@@ -27,6 +31,10 @@
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/core/components/create-new-board-popup/create-new-board-popup.component.html</context>
           <context context-type="linenumber">11,12</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/modules/board/components/column/column.component.html</context>
+          <context context-type="linenumber">8,9</context>
         </context-group>
         <note priority="1" from="description">Error message</note>
       </trans-unit>
@@ -36,21 +44,65 @@
           <context context-type="sourcefile">src/app/core/components/create-new-board-popup/create-new-board-popup.component.html</context>
           <context context-type="linenumber">14,15</context>
         </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/modules/board/components/column/column.component.html</context>
+          <context context-type="linenumber">11,12</context>
+        </context-group>
+        <note priority="1" from="description">Error message</note>
+      </trans-unit>
+      <trans-unit id="descrText" datatype="html">
+        <source>Description</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/core/components/create-new-board-popup/create-new-board-popup.component.html</context>
+          <context context-type="linenumber">21</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/modules/board/components/create-task-form/create-task-form.component.html</context>
+          <context context-type="linenumber">24</context>
+        </context-group>
+        <note priority="1" from="description">Simple message</note>
+      </trans-unit>
+      <trans-unit id="errorDescr" datatype="html">
+        <source>Please enter a description</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/core/components/create-new-board-popup/create-new-board-popup.component.html</context>
+          <context context-type="linenumber">25</context>
+        </context-group>
+        <note priority="1" from="description">Input message</note>
+      </trans-unit>
+      <trans-unit id="shortDescrErr" datatype="html">
+        <source> The description is too short</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/core/components/create-new-board-popup/create-new-board-popup.component.html</context>
+          <context context-type="linenumber">27,28</context>
+        </context-group>
+        <note priority="1" from="description">Error message</note>
+      </trans-unit>
+      <trans-unit id="longDescrErr" datatype="html">
+        <source> The description is too long</source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/core/components/create-new-board-popup/create-new-board-popup.component.html</context>
+          <context context-type="linenumber">30,31</context>
+        </context-group>
         <note priority="1" from="description">Error message</note>
       </trans-unit>
       <trans-unit id="createText" datatype="html">
         <source> Create </source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/core/components/create-new-board-popup/create-new-board-popup.component.html</context>
-          <context context-type="linenumber">28,30</context>
+          <context context-type="linenumber">43,45</context>
         </context-group>
         <note priority="1" from="description">Button message</note>
       </trans-unit>
       <trans-unit id="cancelText" datatype="html">
-        <source>Cancel</source>
+        <source> Cancel </source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/core/components/create-new-board-popup/create-new-board-popup.component.html</context>
-          <context context-type="linenumber">31</context>
+          <context context-type="linenumber">46,48</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/modules/board/components/column/column.component.html</context>
+          <context context-type="linenumber">33,35</context>
         </context-group>
         <note priority="1" from="description">Button message</note>
       </trans-unit>
@@ -162,7 +214,7 @@
         <source> Edit </source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/core/components/edit-profile/edit-profile.component.html</context>
-          <context context-type="linenumber">84,86</context>
+          <context context-type="linenumber">85,87</context>
         </context-group>
         <note priority="1" from="description">Edit btn message</note>
       </trans-unit>
@@ -170,7 +222,7 @@
         <source> Delete </source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/core/components/edit-profile/edit-profile.component.html</context>
-          <context context-type="linenumber">93,95</context>
+          <context context-type="linenumber">94,96</context>
         </context-group>
         <note priority="1" from="description">Delete btn message</note>
       </trans-unit>
@@ -178,7 +230,7 @@
         <source> Back </source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/core/components/edit-profile/edit-profile.component.html</context>
-          <context context-type="linenumber">102,104</context>
+          <context context-type="linenumber">103,105</context>
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/modules/auth/components/sign-up/sign-up.component.html</context>
@@ -190,7 +242,7 @@
         <source><x id="START_TAG_MAT_ICON" ctype="x-mat_icon" equiv-text="&lt;mat-icon&gt;"/>power_settings_new<x id="CLOSE_TAG_MAT_ICON" ctype="x-mat_icon" equiv-text="&lt;/mat-icon&gt;"/> logout </source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/core/header/header.component.html</context>
-          <context context-type="linenumber">22,24</context>
+          <context context-type="linenumber">25,27</context>
         </context-group>
         <note priority="1" from="description">argument</note>
       </trans-unit>
@@ -198,7 +250,7 @@
         <source>Home</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/core/header/header.component.ts</context>
-          <context context-type="linenumber">13</context>
+          <context context-type="linenumber">14</context>
         </context-group>
         <note priority="1" from="description">nav link</note>
       </trans-unit>
@@ -206,7 +258,7 @@
         <source>Edit profile</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/core/header/header.component.ts</context>
-          <context context-type="linenumber">18</context>
+          <context context-type="linenumber">19</context>
         </context-group>
         <note priority="1" from="description">nav link</note>
       </trans-unit>
@@ -214,7 +266,7 @@
         <source>Create new board</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/core/header/header.component.ts</context>
-          <context context-type="linenumber">23</context>
+          <context context-type="linenumber">24</context>
         </context-group>
         <note priority="1" from="description">nav link</note>
       </trans-unit>
@@ -254,7 +306,7 @@
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/modules/auth/components/sign-in/sign-in.component.html</context>
-          <context context-type="linenumber">47,49</context>
+          <context context-type="linenumber">48,50</context>
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/modules/auth/components/sign-up/sign-up.component.html</context>
@@ -278,7 +330,7 @@
         <source> The password field is required </source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/modules/auth/components/sign-in/sign-in.component.html</context>
-          <context context-type="linenumber">41,43</context>
+          <context context-type="linenumber">42,44</context>
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/modules/auth/components/sign-up/sign-up.component.html</context>
@@ -294,7 +346,7 @@
         <source> Login </source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/modules/auth/components/sign-in/sign-in.component.html</context>
-          <context context-type="linenumber">52,54</context>
+          <context context-type="linenumber">53,55</context>
         </context-group>
         <note priority="1" from="description">Simple message</note>
       </trans-unit>
@@ -302,7 +354,7 @@
         <source>Registration</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/modules/auth/components/sign-in/sign-in.component.html</context>
-          <context context-type="linenumber">56</context>
+          <context context-type="linenumber">57</context>
         </context-group>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/modules/auth/components/sign-up/sign-up.component.html</context>
@@ -354,11 +406,19 @@
         </context-group>
         <note priority="1" from="description">Simple message</note>
       </trans-unit>
-      <trans-unit id="columnTitle" datatype="html">
-        <source>Title: <x id="INTERPOLATION" equiv-text="{{ column.title }}"/></source>
+      <trans-unit id="submitText" datatype="html">
+        <source> submit </source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/modules/board/components/column/column.component.html</context>
-          <context context-type="linenumber">2</context>
+          <context context-type="linenumber">23,25</context>
+        </context-group>
+        <note priority="1" from="description">Button message</note>
+      </trans-unit>
+      <trans-unit id="colTitleText" datatype="html">
+        <source> Title: <x id="INTERPOLATION" equiv-text="{{ column.title }}"/> </source>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/modules/board/components/column/column.component.html</context>
+          <context context-type="linenumber">41,43</context>
         </context-group>
         <note priority="1" from="description">Simple message</note>
       </trans-unit>
@@ -366,7 +426,7 @@
         <source> Task list is empty </source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/modules/board/components/column/column.component.html</context>
-          <context context-type="linenumber">15,17</context>
+          <context context-type="linenumber">55,57</context>
         </context-group>
         <note priority="1" from="description">Simple message</note>
       </trans-unit>
@@ -402,14 +462,6 @@
         </context-group>
         <note priority="1" from="description">Simple message</note>
       </trans-unit>
-      <trans-unit id="descrText" datatype="html">
-        <source>Description</source>
-        <context-group purpose="location">
-          <context context-type="sourcefile">src/app/modules/board/components/create-task-form/create-task-form.component.html</context>
-          <context context-type="linenumber">24</context>
-        </context-group>
-        <note priority="1" from="description">Simple message</note>
-      </trans-unit>
       <trans-unit id="taskCancelText" datatype="html">
         <source> No Thanks </source>
         <context-group purpose="location">
@@ -442,7 +494,7 @@
         <source>User was edited</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/services/user.service.ts</context>
-          <context context-type="linenumber">35</context>
+          <context context-type="linenumber">36</context>
         </context-group>
         <note priority="1" from="description">user edited msg</note>
       </trans-unit>
@@ -450,7 +502,7 @@
         <source>User was not edited!</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/services/user.service.ts</context>
-          <context context-type="linenumber">40</context>
+          <context context-type="linenumber">41</context>
         </context-group>
         <note priority="1" from="description">user edited msg</note>
       </trans-unit>
@@ -487,14 +539,6 @@
         </context-group>
         <note priority="1" from="description">Simple message</note>
       </trans-unit>
-      <trans-unit id="okText" datatype="html">
-        <source> Ok </source>
-        <context-group purpose="location">
-          <context context-type="sourcefile">src/app/shared/components/dialog/dialog.component.html</context>
-          <context context-type="linenumber">31,33</context>
-        </context-group>
-        <note priority="1" from="description">Simple message</note>
-      </trans-unit>
       <trans-unit id="snackBarMsg" datatype="html">
         <source> User &quot;<x id="PH" equiv-text="user.login"/>&quot; was deleted</source>
         <context-group purpose="location">
@@ -507,7 +551,7 @@
         <source>Non column</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/modules/board/containers/board-shell/board-shell.component.html</context>
-          <context context-type="linenumber">29,32</context>
+          <context context-type="linenumber">28,31</context>
         </context-group>
         <note priority="1" from="description">Simple message</note>
       </trans-unit>
@@ -515,7 +559,7 @@
         <source> + Add column </source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/modules/board/containers/board-shell/board-shell.component.html</context>
-          <context context-type="linenumber">44,47</context>
+          <context context-type="linenumber">43,46</context>
         </context-group>
         <note priority="1" from="description">Simple message</note>
       </trans-unit>
@@ -523,7 +567,7 @@
         <source>File not found</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/modules/mail-list/container/lists-shell/lists-shell.component.html</context>
-          <context context-type="linenumber">10,12</context>
+          <context context-type="linenumber">9,11</context>
         </context-group>
         <note priority="1" from="description">Simple message</note>
       </trans-unit>
