--- a/src/locale/messages.ru.xlf
+++ b/src/locale/messages.ru.xlf
@@ -392,7 +392,7 @@
       </trans-unit>
       <trans-unit id="taskErrReqText" datatype="html">
         <source> Fill box is required. </source>
-        <target> Фил бокс обязательный </target>
+        <target> Поле обязательное </target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/modules/board/components/create-task-form/create-task-form.component.html</context>
           <context context-type="linenumber">12,14</context>
